--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -60,13 +60,34 @@
                     </div>
                 </form>
             </div>
+            <br>
+            <br>
+            <br>
+            <div class="col-sm-12">
+                <h6>Logs:</h6>
+                <table class="table table-condensed-14 table-bordered table-striped table-sm"
+                       id="mainTable1" data-page-length='5'>
+                    <thead class="thead-dark">
+                    <tr>
+                        <th>Description</th>
+                        <th>Date</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="log: ${logs}">
+                        <td th:text="${log.logDescription}"></td>
+                        <td th:text="${log.date}"></td>
+
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <div class="col-lg-8">
         <div class="card">
             <div class="table-responsive table--no-card m-b-20">
-                <h1>Table:
-                </h1>
+                <h1>Table:</h1>
                 <table class="table table-condensed-14 table-bordered table-striped table-sm"
                        id="mainTable" data-page-length='5'>
                     <thead class="thead-dark">
@@ -81,8 +102,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="user: ${users}" class="uncheckedRow"
-                        onclick="changeRowColorOnTable(this)">
+                    <tr th:each="user: ${users}">
                         <td style="display:none" th:text="${user.id}">
                         <td th:text="${user.name}"></td>
                         <td th:text="${user.surName}"></td>
@@ -116,6 +136,7 @@ $(document).ready( function () {
         "info":     false,
     });
 } );
+
 
 </script>
 </body>
