--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,11 +23,10 @@
 <br>
 <div class="row">
     <div class="col-lg-3">
-
         <div class="card">
             <div class="col-sm-12">
                 <form method="POST" action="/" enctype="multipart/form-data">
-                    <h4>Select a file to upload:</h4>
+                    <h5>Select a file to upload:</h5>
                     <input type="file" name="file" class="btn btn-md"/>
                     <button name="action" type="success" align="right"
                             class="btn btn-primary btn-md">
@@ -39,7 +38,7 @@
             <div class="col-sm-12">
                 <form action="/removeList" method="POST">
                     <div th:if="${fileNameList != null and !fileNameList.isEmpty()}">
-                        <h5>Select a file name list to remove all users from this list:</h5>
+                        <h6>Select a file name list to remove all users from this list:</h6>
                         <div class="row">
                             <div class="col-sm-6">
                                 <select class="selectpicker btn btn-secondary btn-md" id="fileNameList"
@@ -56,35 +55,15 @@
                                 </button>
                             </div>
                         </div>
-
                     </div>
                 </form>
-            </div>
-            <br>
-            <br>
-            <br>
-            <div class="col-sm-12">
-                <h6>Logs:</h6>
-                <table class="table table-condensed-14 table-bordered table-striped table-sm"
-                       id="mainTable1" data-page-length='5'>
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>Description</th>
-                        <th>Date</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="log: ${logs}">
-                        <td th:text="${log.logDescription}"></td>
-                        <td th:text="${log.date}"></td>
-
-                    </tr>
-                    </tbody>
-                </table>
+                <hr>
+                <h5 th:text="${usersQuantity}"></h5>
+                <h5 th:text="${theOldestUserWithPhone}"></h5>
             </div>
         </div>
     </div>
-    <div class="col-lg-8">
+    <div class="col-lg-6">
         <div class="card">
             <div class="table-responsive table--no-card m-b-20">
                 <h1>Table:</h1>
@@ -125,6 +104,27 @@
             </div>
         </div>
     </div>
+    <div class="col-lg-3">
+        <div class="col-sm-12">
+            <h6>Logs:</h6>
+            <table class="table table-condensed-14 table-bordered table-striped table-sm"
+                   id="mainTable1" data-page-length='5'>
+                <thead class="thead-dark">
+                <tr>
+                    <th>Description</th>
+                    <th>Date</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="log: ${logs}">
+                    <td th:text="${log.logDescription}"></td>
+                    <td th:text="${log.date}"></td>
+
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
@@ -136,6 +136,9 @@ $(document).ready( function () {
         "info":     false,
     });
 } );
+
+
+
 
 
 </script>
